# methodverse

./: .gitignore  LICENSE  README.md  pyproject.toml  python.py  todo.txt
methodverse/: __init__.py  core.py
