[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methodverse"
version = "1.0.1"
description = "A quick reference tool for Python built-in methods."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "marvinminhaz", email = "marvinminhaz@outlook.com" }]
keywords = ["python", "reference", "methods", "builtins"]
classifiers = [
    "Programming Language :: Python :: 3",
]